
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.techbrij.wallbyday.ActivitySettings"
    android:orientation="vertical"
    android:background="#4a4a4a">

    <ScrollView
        android:id="@+id/scrollview_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <CheckBox android:id="@+id/checkbox_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_enable"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:onClick="onCheckboxClicked"
        android:textColor="#eeeeee"
        android:padding="10dp"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector">
        <TextView
            android:id="@+id/txtMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:paddingTop="@dimen/listitem_text_padding"
            android:paddingBottom="@dimen/listitem_text_padding"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:text="Mode"
            android:layout_marginBottom="10dp"
            />
</RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector"
        android:padding="5dp"
        >

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_radio_group"
        android:orientation="vertical"
        >
        <RadioButton android:id="@+id/settings_stretch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_stretch"
            android:onClick="onRadioButtonClicked"
            android:textColor="#eeeeee"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio" />
        <RadioButton android:id="@+id/settings_fit_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fit_width"
            android:onClick="onRadioButtonClicked"
            android:textColor="#eeeeee"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio" />
        <RadioButton android:id="@+id/settings_fit_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fit_height"
            android:onClick="onRadioButtonClicked"
            android:textColor="#eeeeee"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio" />
        <RadioButton android:id="@+id/settings_no_resize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_no_resize"
            android:onClick="onRadioButtonClicked"
            android:textColor="#eeeeee"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio" />
    </RadioGroup>

    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
    <Button
        android:id="@+id/buttonAbout"
        android:text="@string/about"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:onClick="onAboutClicked"
        >
    </Button>
    </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
